--- a/09_webApiSamples/pubspec.yaml
+++ b/09_webApiSamples/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   shelf: ^1.1.4
   shelf_router: ^1.0.0
   http: ^0.13.4
+  freezed_annotation: ^2.0.3
+  json_annotation: ^4.5.0
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +50,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.1.11
+  freezed: ^2.0.3+1
+  json_serializable: ^6.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
